--- a/app/views/basketPage.scala.html
+++ b/app/views/basketPage.scala.html
@@ -1,4 +1,5 @@
-@(login:String,isAdmin:Boolean,nameColomn:Seq[String],win:Seq[wine])
+@(login: String, isAdmin: Boolean, nameColomn: Seq[String], win: Seq[wine], LoginForm: play.data.Form[LoginForm],
+        registrationForm: play.data.Form[User], error: Integer)
 <html lang="en">
     <head>
         <meta charset="UTF-8">
@@ -13,13 +14,12 @@
         <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("stylesheets/startPage.css")">
         <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("stylesheets/search.css")">
         <link rel="stylesheet" type="text/css" href='@routes.Assets.versioned("stylesheets/bootstrap.min.css")'>
-
         @*<script src="@routes.Assets.versioned("javascripts/window.js")" type="text/javascript"></script>*@
         <script src="@routes.Assets.versioned("javascripts/jquery-2.2.0.min.js")" type="text/javascript"></script>
         <script src="@routes.Assets.versioned("javascripts/bootstrap.min.js")" type="text/javascript"></script>
     </head>
     <body>
-        @if(!(login.isEmpty)){
+        @if(!(login.isEmpty)) {
             <div align="right">
 
                 Вы вошли как :@login
@@ -28,141 +28,236 @@
             </div>
         }
 
-        <div align="center">
-            <h2>Barton & Guestier</h2>
+    <div align="center">
+        <h2>Barton & Guestier</h2>
 
-            <p></p>
-
-
-            <p></p>
-            <ul class="menu" >
-                <li> <a href=#>Личный кабинет </a>
-                    <ul class="submenu">
-                        @if(login.isEmpty) {
-                            <li><a href="#win1" class="button button-green">Вход</a></li>
-                            <li><a href="#win2" class="button button-green">Регистрация</a></li>
-                            @*<li><a href="@routes.LoginController.renderLoginForm()">Вход</a></li>*@
-                            @*<li><a href="@routes.UsersController.renderAddUserForm(isAdmin)">Регистрация</a></li>*@
-                        }
-                        @if(!(login.isEmpty)){
-                            <li><a href="@routes.LoginController.logout()">Выход</a></li>
-                        }
-
-                    </ul>
-                </li>
-
-            </ul>
-            <ul id="nav">
+        <p></p>
 
 
-                    <li><a href="@routes.mainPageController.contactPage(login,isAdmin)">Контакты </a ></li>
-                    <li><a href="@routes.WineController.catalogPage(login,isAdmin)">Каталог </a></li>
-                    @helper.form(action = routes.mainPageController.projectPage2) {
-                        <input type="hidden" name="login" value="@login">
-                        <input type="hidden" name="isAdmin" value="@isAdmin">
-                        <input type="submit" value="О проекте">
-                    }
-                    @if(isAdmin){
-                        @*<li><a href="@routes.WineController.renderAddWine(login)">Добавить товар </a></li>*@
-                        <li><a href="#win3" class="button button-green">Добавить товар</a></li>
-                        <li><a href="@routes.UsersController.usersList(login)">Список пользователей </a></li>
-                    }
+            <!-- Модальное окно №1 -->
+        <a href="#x" class="overlay" id="win1"></a>
+        <div class="popup">
+            @helper.form(action = routes.LoginController.checkingLoginForm(), 'id -> "slick-login") {
+                <div class="modal-header">
+
+                    <h1 class="modal-title">Вход в личный кабинет</h1>
+                </div>
+
+                <br>
+                @helper.inputText(LoginForm("login"), '_showConstraints -> false, 'placeholder -> "Логин", 'required -> "required")
+                @helper.inputPassword(LoginForm("password"), '_showConstraints -> false, 'placeholder -> "Пароль", 'required -> "required")
+
+                <div class="modal-footer">
+                    <input type ="submit" value="Войти">
+                </div>
 
 
-            </ul>
-            <p></p>
-            <p></p>
-            <p></p>
-
-                @*вывод колонки*@
-            @colomn(i:Int)=@{
-                val it =nameColomn
-                it(i)
-            }
-                @*вывод строки*@
-            @display(i:Int)=@{
-                val it = win
-                it(i)
-            }
-                @*всего колонок*@
-            @sizeItems()=@{
-                if(nameColomn==null) {
-                    val tmp =0
-                    tmp
-                }
-                else{
-                val sizeItems = nameColomn.length
-                 sizeItems
-                }
-            }
-                @*количество страниц*@
-            @pages=@{
-
-                sizeItems2()/sizeItems()
+                <a href="@routes.UsersController.renderAddUserForm(false, 0)" class="slick-login2">Регистрация</a>
 
             }
-                @*всего записываемых элементов*@
-            @sizeItems2()=@{
-                val sizeItems2 = win.length
-                sizeItems2
-
-            }
-
-                @*печатает название таблиц*@
-            @printCode(i:Int)=@{
-                val cod = "wine"
-                cod(i)
-            }
-
-            <table class="wine">
-                <tr>
-                    <td>
-                        @if(sizeItems()!=0){
-                        <table class="wine1">
-                            <tr>
-                            @for(j <- 1 to sizeItems) {
-                                <th>@colomn(j-1)</th>
-                            }
-                            </tr>
-                            <tr colspan="2"> @win.map { item =>
-
-                                <th>@item.getIdProduct</th>
-                                <th>@item.getName</th>
-                                <th>@item.getColour</th>
-                                <th>@item.getCountry</th>
-                                <th>@item.getBrand</th>
-                                <th>@item.getShelfLife</th>
-                                <th>@item.getSugar</th>
-                                <th>@item.getGrapeSort</th>
-                                <th>@item.getPrice</th>
-                                <th>@item.getValue</th>
-                                <th>@item.getDegree</th>
-
-                                <th>
-                                    <button onclick="window.location.href='@routes.BasketController.deleteFromBasket(item.getIdProduct,login,isAdmin)'"
-                                    type="submit" class="btn btn-default btn-sm">
-                                        <span class="glyphicon glyphicon-trash"></span>
-                                    </button>
-                                </th>
-
-
-                            @if(isAdmin) {
-                                <th>
-                                    @*<li><a href="#win4" class="button button-green">Изменить</a></li>*@
-
-                                </th>
-                            }
-                            <tr></tr>
-                            }
-
-                        </table>
-                    </td>
-                </tr>
-            </table>
-            }
-            @if(sizeItems()==0){
-                Корзина пустая !
-            }
+        <a class="close" title="Закрыть" href="#close"></a>
         </div>
+
+            <!-- Модальное окно №2 -->
+        <a href="#x" class="overlay" id="win2"></a>
+        <div class="popup">
+            <div class="modal-header">
+
+                <h1 class="modal-title">Регистрация </h1>
+            </div>
+
+            @helper.form(action = routes.UsersController.addingUser(isAdmin), 'id -> "slick-login") {
+
+                @helper.inputText(registrationForm("login"), '_showConstraints -> false, 'placeholder -> "Логин", 'required -> "required")
+
+                @helper.inputText(registrationForm("password"), '_showConstraints -> false, 'placeholder -> "Ваш сложный пароль", 'required -> "required")
+                @if(isAdmin) {
+                    Права администратора:@helper.checkbox(registrationForm("isAdmin"))
+                }
+
+                <div class="modal-footer">
+                    <input type ="submit" value="Создать">
+                </div>
+
+
+            }
+            <a class="close" title="Закрыть" href="#close"></a>
+        </div>
+
+        @if(error == 1 || error == 2) {
+                <!-- Модальное окно при загрузке -->
+
+            <div class="container">
+                    <!-- Modal -->
+                <div class="modal fade" id="myModal" role="dialog">
+                    <div class="modal-dialog">
+
+                            <!-- Modal content-->
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <button type="button" class="close" data-dismiss="modal"></button>
+                                <h4 class="modal-title">Ошибка! </h4>
+                            </div>
+                            <div class="modal-body">
+                                <h4> Неверный пароль или логин!</h4>
+                            </div>
+
+                        </div>
+
+                    </div>
+                </div>
+            </div>
+
+            <script>
+                    $(document).ready(function () {
+                        $('#myModal').modal('show');
+                    });
+            </script>
+        }
+
+        <p></p>
+
+        <ul class="menu" >
+            <li> <a href=#>Личный кабинет </a>
+                <ul class="submenu">
+                    @if(login.isEmpty) {
+                        <li><a href="#win1" class="button button-green">Вход</a></li>
+                        <li><a href="#win2" class="button button-green">Регистрация</a></li>
+                        @*<li><a href="@routes.LoginController.renderLoginForm()">Вход</a></li>*@
+                        @*<li><a href="@routes.UsersController.renderAddUserForm(isAdmin)">Регистрация</a></li>*@
+                    }
+                    @if(!(login.isEmpty)) {
+                        <li><a href="@routes.LoginController.logout()">Выход</a></li>
+                    }
+
+                </ul>
+            </li>
+
+        </ul>
+        <ul id="nav">
+
+            <li><a>@helper.form(action = routes.mainPageController.contactPage) {
+                <input type="submit" value="Контакты">
+                }</a>
+            </li>
+            <li><a>@helper.form(action = routes.WineController.catalogPage) {
+                <input type="submit" value="Каталог">
+                }</a>
+            </li>
+            <li><a> @helper.form(action = routes.mainPageController.projectPage2) {
+                <input type="submit" value="О проекте ">
+                }
+            </a>
+            </li>
+            <li><a>@helper.form(action = routes.BasketController.basketPage()) {
+                <input type="submit" value="Корзина">
+                }</a>
+            </li>
+
+            @if(isAdmin) {
+                @*<li><a href="@routes.WineController.renderAddWine(login)">Добавить товар </a></li>*@
+                <li><a href="#win3" class="button button-green">Добавить товар</a></li>
+                <li><a href="@routes.UsersController.usersList(login)">Список пользователей </a></li>
+            }
+
+        </ul>
+        <p></p>
+        <p></p>
+        <p></p>
+
+            @*вывод колонки*@
+        @colomn(i: Int) = @{
+            val it = nameColomn
+            it(i)
+        }
+
+            @*вывод строки*@
+        @display(i: Int) = @{
+            val it = win
+            it(i)
+        }
+
+            @*всего колонок*@
+        @sizeItems() = @{
+            if(nameColomn == null) {
+                val tmp = 0
+                tmp
+            }
+            else {
+                val sizeItems = nameColomn.length
+                sizeItems
+            }
+        }
+
+            @*количество страниц*@
+        @pages = @{
+
+            sizeItems2() / sizeItems()
+
+        }
+
+            @*всего записываемых элементов*@
+        @sizeItems2() = @{
+            val sizeItems2 = win.length
+            sizeItems2
+
+        }
+
+            @*печатает название таблиц*@
+        @printCode(i: Int) = @{
+            val cod = "wine"
+            cod(i)
+        }
+
+        <table class="wine">
+            <tr>
+                <td>
+                @if(sizeItems() != 0) {
+                    <table class="wine1">
+                        <tr>
+                        @for(j <- 1 to sizeItems) {
+                            <th>@colomn(j - 1)</th>
+                        }
+                        </tr>
+                        <tr colspan="2"> @win.map { item =>
+
+                            <th>@item.getIdProduct</th>
+                            <th>@item.getName</th>
+                            <th>@item.getColour</th>
+                            <th>@item.getCountry</th>
+                            <th>@item.getBrand</th>
+                            <th>@item.getShelfLife</th>
+                            <th>@item.getSugar</th>
+                            <th>@item.getGrapeSort</th>
+                            <th>@item.getPrice</th>
+                            <th>@item.getValue</th>
+                            <th>@item.getDegree</th>
+
+                            <th>
+                                <button onclick="window.location.href = '@routes.BasketController.deleteFromBasket(item.getIdProduct,login,isAdmin)'"
+                                type="submit" class="btn btn-default btn-sm">
+                                    <span class="glyphicon glyphicon-trash"></span>
+                                </button>
+                            </th>
+
+
+                        @if(isAdmin) {
+                            <th>
+                                @*<li><a href="#win4" class="button button-green">Изменить</a></li>*@
+
+                            </th>
+                        }
+                        <tr></tr>
+                        }
+
+                    </table>
+                </td>
+            </tr>
+        </table>
+        }
+        @if(sizeItems() == 0) {
+            Корзина пустая !
+        }
+    </div>
     </body>
 </html>
