--- a/app/views/indexProjectPage.scala.html
+++ b/app/views/indexProjectPage.scala.html
@@ -1,5 +1,4 @@
-@(login : String,isAdmin:Boolean,bookForm : play.data.Form[LoginForm],registrationForm : play.data.Form[User],error:Integer,
-        dinamicForm:play.data.DynamicForm)
+@(login : String,isAdmin:Boolean,bookForm : play.data.Form[LoginForm],registrationForm : play.data.Form[User],error:Integer)
 <html>
 
     <head>
@@ -17,7 +16,7 @@
         </div>
         }
         @main("О проекте"){
-        @projectPage(login,isAdmin,bookForm,registrationForm,error,dinamicForm)
+        @projectPage(login,isAdmin,bookForm,registrationForm,error)
 
     }
 
